RESOLVED FIXED24619
RenderObject::selectionStartEnd does not need to be a virtual function
https://bugs.webkit.org/show_bug.cgi?id=24619
Summary RenderObject::selectionStartEnd does not need to be a virtual function
Darin Adler
Reported 2009-03-16 09:04:48 PDT
The base class version of selectionStartEnd would work fine even for the one class, RenderView, that overrides it. It would be a small speedup to make the function non-virtual.
Attachments
patch (1.70 KB, patch)
2009-03-16 09:06 PDT, Darin Adler
adele: review+
Darin Adler
Comment 1 2009-03-16 09:06:11 PDT
Darin Adler
Comment 2 2009-03-16 15:41:36 PDT
trac.webkit.org/changeset/41748
Note You need to log in before you can comment on or make changes to this bug.