2009-03-16  Darin Adler  <darin@apple.com>

Reviewed by Adele Peterson.

        Bug 24619: RenderObject::selectionStartEnd does not need to be a virtual function
        https://bugs.webkit.org/show_bug.cgi?id=24619

        * rendering/RenderObject.h: Remove virtual keyword from selectionStartEnd declaration.
        * rendering/RenderView.h: Ditto.



Canonical link: https://commits.webkit.org/33805@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41748 268f45cc-cd09-0410-ab3c-d52691b4dbfc